--- a/index_univ.html
+++ b/index_univ.html
@@ -79,8 +79,8 @@
                     <td class="status"></td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCaM01" target="_blank" class="none">PC</a>
-                        <a href="./mobile/UI_ADHPCaM01" target="_blank" class="none">Mo</a>
+                        <a href="./pc/UI_ADHPCaM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCaM01.html" target="_blank">Mo</a>
                     </td>
                 </tr>
                 <tr>
