--- a/mobile/01_UI_ADHPAaM01.html
+++ b/mobile/01_UI_ADHPAaM01.html
@@ -78,7 +78,7 @@
                                 <div class="uniporg_cont_inner">
                                     <div class="list_cont_area mt24">
                                         <div class="board_header">
-                                            <p class="count"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
+                                            <p class="count" role="text"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
                                             <div class="select_area">
                                                 <div class="flex_box"><button type="button" class="align select_btn">10개씩 보기</button></div>
                                                 <div class="select_layer dsp-none">
