--- a/mobile/02_UI_ADHPAaM02.html
+++ b/mobile/02_UI_ADHPAaM02.html
@@ -40,7 +40,7 @@
 
                                 <section aria-label="프로그램 목록" class="prog_list_sec">
                                     <div class="board_header">
-                                        <p class="count"><span>전체</span> <strong>121,421</strong><span>건</span></p>
+                                        <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
                                         <div class="select_area">
                                             <div class="view_select_box"><button type="button" class="align" aria-label="페이지 당 표시할 항목 수 선택">10개씩 보기</button></div>
                                             <div class="dimmed_pop dsp-none"></div>
@@ -74,7 +74,7 @@
                                         });
                                     </script>
 
-                                    <div class="board_list">
+                                    <div class="board_list prog_type_a">
                                         <ul class="prog_ul">
                                             <li class="prog_item">
                                                 <article>
@@ -90,8 +90,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>AAA 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>AAA 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -114,8 +114,8 @@
                                                             <span class="onsite">대면</span>
                                                             <span class="offsite on ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>BBB 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>BBB 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -138,8 +138,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>CCC 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>CCC 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -162,8 +162,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>DDD 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>DDD 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -186,8 +186,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>EEE 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>EEE 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -210,8 +210,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>FFF 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>FFF 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -234,8 +234,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>GGG 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>GGG 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -258,8 +258,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>HHH 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>HHH 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -282,8 +282,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>III 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>III 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
@@ -306,8 +306,8 @@
                                                             <span class="onsite on">대면</span>
                                                             <span class="offsite ">비대면</span>
                                                         </div>
+                                                        <div class="prog_uni"><p>JJJ 대학교</p></div>
                                                     </div>
-                                                    <div class="prog_uni"><p>JJJ 대학교</p></div>
                                                     <div class="prog_tit"><p class="t3_sb">빠르고 쉽게 배우는 파이썬을 이용한 인공지능</p></div>
                                                     <ul class="prog_details">
                                                         <li class="oper_year">2025-01-01 ~ 2026-01-01</li>
