--- a/mobile/08_UI_ADHPAbP06.html
+++ b/mobile/08_UI_ADHPAbP06.html
@@ -38,7 +38,7 @@
 
                                 <div class="list_cont_area prog_list_sec">
                                     <div class="board_header">
-                                        <p class="count"><span>전체</span> <strong>121,421</strong><span>건</span></p>
+                                        <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
                                         <div class="select_area">
                                             <div class="flex_box"><button type="button" class="align select_btn" aria-haspopup="listbox" aria-expanded="false">10개씩 보기</button></div>
                                             <div class="select_layer dsp-none" role="listbox" tabindex="-1">
