--- a/mobile/14_UI_ADHPAcM02.html
+++ b/mobile/14_UI_ADHPAcM02.html
@@ -71,7 +71,7 @@
 
                         <section aria-label="프로그램 목록" class="prog_list_sec pad_none prog_spec_twin">
                             <div class="board_header">
-                                <p class="count"><span>전체</span> <strong>121,421</strong><span>건</span></p>
+                                <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
                                 <div class="select_area">
                                     <div class="view_select_box"><button type="button" class="align" aria-label="페이지 당 표시할 항목 수 선택">10개씩 보기</button></div>
                                     <div class="dimmed_pop dsp-none"></div>
