--- a/mobile/UI_ADHPCcM01.html
+++ b/mobile/UI_ADHPCcM01.html
@@ -33,7 +33,7 @@
 
                         <section aria-label="프로그램 목록" class="prog_list_sec prg_spec">
                             <div class="board_header">
-                                <p class="count"><span>전체</span> <strong>121,421</strong><span>건</span></p>
+                                <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
                                 <div class="year">
                                     참여연도 : <strong class="point_color">2025</strong>년
                                 </div>
