--- a/mobile/04_UI_ADHPAbM02.html
+++ b/mobile/04_UI_ADHPAbM02.html
@@ -57,7 +57,7 @@
                         <!-- table -->
                         <div class="board_wrap pa_page_wrap">
                             <div class="board_header">
-                                <p class="count"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
+                                <p class="count" role="text"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
                                 <div class="select_area">
                                     <div class="flex_box"><button type="button" class="align select_btn">10개씩 보기</button></div>
                                     <div class="select_layer dsp-none">
