--- a/mobile/18_UI_ADHPAdM02.html
+++ b/mobile/18_UI_ADHPAdM02.html
@@ -161,7 +161,7 @@
 
                         <section class="prog_list_sec prog_spec_twin pad_none">
                             <div class="board_header">
-                                <p class="count"><span>전체</span> <strong>121,421</strong><span>건</span></p>
+                                <p class="count" role="text"><span>전체</span> <strong>121,421</strong><span>건</span></p>
                                 <div class="select_area">
                                     <div class="view_select_box"><button type="button" class="align" aria-label="페이지 당 표시할 항목 수 선택">10개씩 보기</button></div>
                                     <div class="dimmed_pop dsp-none"></div>
