--- a/mobile/UI_ADHPCbM02.html
+++ b/mobile/UI_ADHPCbM02.html
@@ -56,7 +56,7 @@
                         <div class="board_wrap pa_page_wrap">
                             <h3 class="t1_sb icon_add"><i class="icon num01"></i><span>나의 신청 내역</span></h3>
                             <div class="board_header mt16">
-                                <p class="count"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
+                                <p class="count" role="text"><span>전체</span> <strong class="s1_sb semi_bold">121,421</strong><span>건</span></p>
                                 <div class="select_layer dsp-none">
                                     <ul class="select_option">
                                         <li>
