--- a/mobile/UI_ADHPCdS06.html
+++ b/mobile/UI_ADHPCdS06.html
@@ -153,7 +153,7 @@
                                     <li>
                                         <p class="job">{희망 직업 1}</p>
                                         <h3 class="t3_sb">단기 계획 및 중장기 계획</h3>
-                                        <ul class="step">
+                                        <ul class="step mt8">
                                             <!-- 반복 -->
                                             <li>
                                                 <div class="head">
@@ -275,7 +275,7 @@
                                             </li>
 
                                             <li>
-                                                <div class="head">
+                                                <div class="head mt24">
                                                     <span class="title">2. 중장기 계획</span>
                                                     <button type="button" class="button"><i class="icon"></i><span>계획 추가</span></button>
                                                 </div>
