--- a/pc/10_UI_ADHPAbP08.html
+++ b/pc/10_UI_ADHPAbP08.html
@@ -234,7 +234,7 @@
 
 
         <!-- 팝업내용 시작 -->
-        <section id="operPrgmPopup" class="new_popup allcare_popup newpop_uni_index" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
+        <section id="operPrgmPopup" class="full_pop large full_01" style="display: block;" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
             <header class="head type2 newpop_tit">
                 <h1 id="operPrgmPopupTitle" class="h2_sb">전공 찾기</h1>
                 <!-- 닫기 -->
@@ -243,8 +243,8 @@
                 </button>
             </header>
 
-            <form:form id="operPrgmForm" name="operPrgmForm" method="POST" modelAttribute="HPFSAA0101VO">
-                <div id="divOperPrgmCont" class="cont">
+            <div id="divOperPrgmCont" class="cont">
+                <div class="allcare_popup newpop_uni_index">
                     <div class="newpop_inner newpop_major_search">
                         <div class="search_box">
                             <article class="box_form_content">
@@ -585,12 +585,12 @@
                         </div>
                     </div>
 
-                    <div class="newpop_save uni_save btn_box mt40">
+                    <div class="newpop_save uni_save btn_box">
                         <button type="button" class="btn big type02" onclick="location.href='';">닫기</button>
                         <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
                     </div>
                 </div>
-            </form:form>
+            </div>
         </section>
 </body>
 
