--- a/pc/UI_ADHPChP03.html
+++ b/pc/UI_ADHPChP03.html
@@ -70,16 +70,17 @@
 
 
         <!-- 팝업내용 시작 -->
-        <section id="operPrgmPopup" class="new_popup allcare_popup" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
+        <section id="operPrgmPopup" class="full_pop large full_01" style="display: block;" role="dialog" aria-modal="true" aria-labelledby="operPrgmPopupTitle">
             <header class="head type2 newpop_tit">
                 <h1 id="operPrgmPopupTitle" class="h2_sb">선택한 유형명</h1>
                 <!-- 닫기 -->
                 <button type="button" id="btnClose_operPrgmPopup" class="btn-close closed" aria-label="팝업 닫기">
                     <span class="blind">팝업 닫기</span>
                 </button> 
-            </header>                                                                                               
-            <form:form id="operPrgmForm" name="operPrgmForm" method="POST" modelAttribute="HPFSAA0101VO">
-                <div class="cont" id="divOperPrgmCont">
+            </header> 
+            
+            <div class="cont" id="divOperPrgmCont">
+                <div class="allcare_popup">
                     <div class="newpop_inner jobact_area">
                         <ul class="jobact_wrap">
                             <li class="jobact_list">
@@ -164,8 +165,9 @@
                         <button type="button" class="btn big type02" onclick="">닫기</button>
                         <button type="submit" id="submitBtn" class="btn big fill type01" onclick="">적용</button>
                     </div>
+
                 </div>
-            </form:form>
+            </div>
         </section>
         <!-- 팝업 종료 -->
 </body>
