--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -68,7 +68,7 @@
                                         </dd>
                                         <dt class="req_mark">참여자 분류</dt>
                                         <dd>
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_twin_type02">
                                                 <legend class="sr_only">참여자 분류 선택</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="customType1" name="customType" value="graduate" checked>
