--- a/mobile/11_UI_ADHPAbP09.html
+++ b/mobile/11_UI_ADHPAbP09.html
@@ -41,7 +41,7 @@
                                         <p class="s1_sb">전공 및 학과</p>
                                     </div>
                                     <div class="major_result_list">
-                                        <fieldset class="radio_group">
+                                        <fieldset class="radio_group radio_twin_type01">
                                             <legend class="sr_only">학과 검색결과 선택</legend>
                                             
                                             <div class="new_radio_item">
