--- a/pc/UI_ADHPCbS04-1.html
+++ b/pc/UI_ADHPCbS04-1.html
@@ -273,7 +273,7 @@
 
                                             <div class="box_group_wrap prof_radio_wrap">
                                                 <h3 class="t2_sb hreq_mark">참여 유형 선택</h3>
-                                                <div class="type_area radio_group">
+                                                <div class="type_area box_radio_group">
                                                     <ul class="item_type">
                                                         <li>
                                                             <div class="box_chk-group radio_group">
@@ -300,6 +300,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
+
 
                                             <div class="box_group_wrap">
                                                 <h3 class="t2_sb hreq_mark">개인정보 수집·이용·제공에 대한 동의서</h3>
