--- a/mobile/19_UI_ADHPAdS03.html
+++ b/mobile/19_UI_ADHPAdS03.html
@@ -115,138 +115,39 @@
                                 </div>
                             </div>
 
-                            <div class="prog_wrap prog_applysummary">
-                                <h4 class="prog_wrap_tit">신청 및 처리현황</h4>
-                                <div class="apply_summary_wrap" role="region">
+                            <div class="prog_wrap prog_applysummary after_border">
+                                <h3 class="t3_sb">신청 및 처리현황</h3>
+                                <div class="apply_summary_wrap mt8" role="region">
                                     <div class="apply_summary_header">
                                         <div class="apply_summary_info  mb24">
                                             <i></i>
-                                            <p class="apply_summary_tit">현재 <span>수료</span> 상태 입니다.</p>
+                                            <p class="apply_summary_tit">현재 참여신청서 <span>수료</span> 상태 입니다.</p>
                                             <p class="apply_summary_tel s1_r ">담당자 : 김담당 (010-0000-0000)</p>
-                                        </div>
-                                        <div class="apply_summary_action off">
-                                            <button type="button" class="apply_summary_toggle" aria-expanded="false" aria-controls="applySummaryDetail"><span>프로그램 참여 이력</span></button>
                                         </div>
                                     </div>
 
                                     <!-- 버튼이 aria-expanded="true" 이면 보임 -->
-                                    <div class="apply_summary_inner" id="applySummaryDetail" hidden>
+                                    <div class="apply_summary_inner" id="progSummaryDetail">
                                         <ul>
                                             <li>
                                                 <div class="apply_summary_status">
-                                                    <p class="status_label">수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">취소</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">신청</p>
+                                                    <p class="status_label">제출</p>
                                                     <p class="status_date">2025-00-00</p>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="apply_summary_status">
                                                     <p class="status_label">수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">취소</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">신청</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미수료</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">미선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">선발</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">취소</p>
-                                                    <p class="status_date">2025-00-00</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="apply_summary_status">
-                                                    <p class="status_label">신청</p>
                                                     <p class="status_date">2025-00-00</p>
                                                 </div>
                                             </li>
                                         </ul>
-                                        <div class="apply_summary_action secon_action">
-                                            <button type="button" class="apply_summary_toggle" aria-expanded="tru" aria-controls="applySummaryDetail"><span>접기</span></button>
-                                        </div>
+                                    </div>
+                                    <div class="apply_summary_action secon_action">
+                                        <button type="button" class="prog_summary_toggle" aria-expanded="true" aria-controls="progSummaryDetail"><span class="">접기</span></button>
                                     </div>
                                 </div>
-
+                                
                                 <div class="apply_summary_pv mt24">
                                     <p>
                                         개인정보 수집·이용·제공에 대한 동의 일자 : <br>
@@ -254,33 +155,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <script>
-                                document.addEventListener('DOMContentLoaded', function () {
-                                    const toggleBtns = document.querySelectorAll('.apply_summary_toggle'); 
-                                    const detailArea = document.getElementById('applySummaryDetail');
 
-                                    toggleBtns.forEach(btn => {
-                                        btn.addEventListener('click', function () {
-                                            const isExpanded = btn.getAttribute('aria-expanded') === 'true';
-                                            const newState = !isExpanded;
 
-                                            toggleBtns.forEach(b => b.setAttribute('aria-expanded', String(newState)));
-
-                                            const firstBtnWrap = toggleBtns[0].closest('.apply_summary_action');
-                                            if (firstBtnWrap) {
-                                                firstBtnWrap.classList.toggle('on', newState);
-                                                firstBtnWrap.classList.toggle('off', !newState);
-                                            }
-
-                                            if (newState) {
-                                                detailArea.removeAttribute('hidden');
-                                            } else {
-                                                detailArea.setAttribute('hidden', '');
-                                            }
-                                        });
-                                    });
-                                });
-                            </script>
 
                             
                         </section>
