--- a/mobile/UI_ADHPCbM09.html
+++ b/mobile/UI_ADHPCbM09.html
@@ -66,7 +66,7 @@
                                     <div>
                                         <div class="dt">참여자 분류</div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_twin_type02">
                                                 <legend class="sr_only">참여자 분류 선택</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="customType1" name="customType" value="graduate" checked disabled>
@@ -123,7 +123,7 @@
                                 <div class="box_table_wrap top_linewrap">
                                     <div>
                                         <div class="dd">
-                                            <fieldset class="radio_group">
+                                            <fieldset class="radio_group radio_twin_type02">
                                                 <legend class="sr_only">참여자 유형 선택</legend>
                                                 <div class="new_radio_item">
                                                     <input type="radio" id="빌드업프로젝트" name="참여자유형선택" checked disabled>
