--- a/mobile/14_UI_ADHPAcM02.html
+++ b/mobile/14_UI_ADHPAcM02.html
@@ -61,7 +61,7 @@
                             <button type="button" role="tab" class="tit" onclick="" aria-selected="false">참여 프로그램 관리</button>
                         </div>
 
-                        <div class="full_box">
+                        <div class="full_box mt24">
                             <div class="search_area pad_none mag_none">
                                 <input type="text" title="검색어 입력" id="srcSearchModeInput1" name="srcKeywordInputBox" maxlength="50" value="" placeholder="검색어를 입력해주세요.">
                                 <button type="button" class="btn middle white" onclick="">검색</button>
@@ -106,7 +106,7 @@
                             </script>
 
                             <div class="board_list">
-                                <ul class="prog_ul">
+                                <ul class="prog_ul prog_type_01">
                                     <li class="prog_item">
                                         <article>
                                             <div class="prog_header">
