--- a/mobile/18_UI_ADHPAdM02.html
+++ b/mobile/18_UI_ADHPAdM02.html
@@ -274,7 +274,7 @@
                             </script>
 
                             <div class="board_list">
-                                <ul class="prog_ul">
+                                <ul class="prog_ul prog_type_01">
                                     <li class="prog_item">
                                         <article>
                                             <div class="prog_header">
