--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -127,7 +127,7 @@
 
                                             <div class="uniporg_cont">
                                                 <h3 class="t2_sb">운영 대학 및 프로그램</h3>
-                                                <article class="box_form_content">
+                                                <article class="box_form_content mb24">
                                                     <div id="searchFrm" name="searchFrm" action="jobPsyExamList.do" method="post" class="reset_area">
                                                         <input type="hidden" id="pageIndex" name="pageIndex" value="1">
                                                         <input type="hidden" id="pageUnit" name="pageUnit" value="6">
@@ -237,9 +237,9 @@
                                                 </article>
 
 
-                                                <div class="box_table_wrap">
+                                                <div class="box_table_wrap mt0">
                                                     <div class="box_table_hd">
-                                                        <p class="tit">전체 <span class="txt_total">1111</span>건</p>
+                                                        <p class="tit" role="text">전체 <span class="txt_total">1111</span>건</p>
                                                         <div class="section_right">
                                                             <span class="sel round new_sel_span">
                                                                 <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="보기 갯수 선택">
